fixed click and drag of player, where used to shift possible player area down and right

--- a/client/styles.css
+++ b/client/styles.css
@@ -4,9 +4,10 @@
 Feel free to use it if you like. */
 
 .gameBoard {
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     width: 700px;
-    display: block;
+    height: 450px;
+    /*display: block;*/
     border:1px solid #ccc;
 }
 
